fix: security fixes

--- a/scripts/templates/reset_password_template.html
+++ b/scripts/templates/reset_password_template.html
@@ -18,7 +18,7 @@
     Uma solicitação de redefinição de senha foi solicitada através do nosso sistema. Abaixo está o link para o ambiente
     de redefinição de senha. É só clicar em Redefinir senha!
 </div>
-<a href="{{link}}" target="_blank">
+<a href="{{link}}" target="_blank" rel="noopener">
     Redefinir senha
 </a>
 <div>
