--- a/scripts/templates/verify_template.html
+++ b/scripts/templates/verify_template.html
@@ -20,7 +20,7 @@
 <div>
     Mas primeiro, precisamos confirmar o seu e-mail para mantermos a sua conta segura. É só clicar no link abaixo.
 </div>
-<a href="{{link}}" target="_blank">
+<a href="{{link}}" target="_blank" rel="noopener">
     Confirmar e-mail
 </a>
 <div>Até mais!</div>
